# currency-converter

./: Cargo.toml  README.md
src/: main.rs
src/web/: mod.rs  routes.rs  templates.rs
src/web/templates/: conversion_result.html  currencies_list.html  error.html  index.html
